cmake_minimum_required(VERSION 3.9)
project(Laboration_1)

set(CMAKE_CXX_STANDARD 11)

add_executable(Laboration_1
        lab-env-master/cmake-build-debug/exts/glfw-3.1.1/src/glfw_config.h
        lab-env-master/engine/core/app.cc
        lab-env-master/engine/core/app.h
        lab-env-master/engine/render/window.cc
        lab-env-master/engine/render/window.h
        lab-env-master/engine/config.cc
        lab-env-master/engine/config.h
        lab-env-master/exts/glew/include/GL/glew.h
        lab-env-master/exts/glew/include/GL/glxew.h
        lab-env-master/exts/glew/include/GL/wglew.h
        lab-env-master/exts/glew/src/glew.c
        lab-env-master/exts/glew/src/glewinfo.c
        lab-env-master/exts/glew/src/visualinfo.c
        lab-env-master/exts/glfw-3.1.1/deps/EGL/eglext.h
        lab-env-master/exts/glfw-3.1.1/deps/GL/glext.h
        lab-env-master/exts/glfw-3.1.1/deps/GL/glxext.h
        lab-env-master/exts/glfw-3.1.1/deps/GL/wglext.h
        lab-env-master/exts/glfw-3.1.1/deps/glad/glad.h
        lab-env-master/exts/glfw-3.1.1/deps/KHR/khrplatform.h
        lab-env-master/exts/glfw-3.1.1/deps/getopt.c
        lab-env-master/exts/glfw-3.1.1/deps/getopt.h
        lab-env-master/exts/glfw-3.1.1/deps/glad.c
        lab-env-master/exts/glfw-3.1.1/deps/tinycthread.c
        lab-env-master/exts/glfw-3.1.1/deps/tinycthread.h
        lab-env-master/exts/glfw-3.1.1/include/GLFW/glfw3.h
        lab-env-master/exts/glfw-3.1.1/include/GLFW/glfw3native.h
        lab-env-master/exts/glfw-3.1.1/src/cocoa_platform.h
        lab-env-master/exts/glfw-3.1.1/src/context.c
        lab-env-master/exts/glfw-3.1.1/src/egl_context.c
        lab-env-master/exts/glfw-3.1.1/src/egl_context.h
        lab-env-master/exts/glfw-3.1.1/src/glx_context.c
        lab-env-master/exts/glfw-3.1.1/src/glx_context.h
        lab-env-master/exts/glfw-3.1.1/src/init.c
        lab-env-master/exts/glfw-3.1.1/src/input.c
        lab-env-master/exts/glfw-3.1.1/src/internal.h
        lab-env-master/exts/glfw-3.1.1/src/iokit_joystick.h
        lab-env-master/exts/glfw-3.1.1/src/linux_joystick.c
        lab-env-master/exts/glfw-3.1.1/src/linux_joystick.h
        lab-env-master/exts/glfw-3.1.1/src/mach_time.c
        lab-env-master/exts/glfw-3.1.1/src/mir_init.c
        lab-env-master/exts/glfw-3.1.1/src/mir_monitor.c
        lab-env-master/exts/glfw-3.1.1/src/mir_platform.h
        lab-env-master/exts/glfw-3.1.1/src/mir_window.c
        lab-env-master/exts/glfw-3.1.1/src/monitor.c
        lab-env-master/exts/glfw-3.1.1/src/nsgl_context.h
        lab-env-master/exts/glfw-3.1.1/src/posix_time.c
        lab-env-master/exts/glfw-3.1.1/src/posix_time.h
        lab-env-master/exts/glfw-3.1.1/src/posix_tls.c
        lab-env-master/exts/glfw-3.1.1/src/posix_tls.h
        lab-env-master/exts/glfw-3.1.1/src/wgl_context.c
        lab-env-master/exts/glfw-3.1.1/src/wgl_context.h
        lab-env-master/exts/glfw-3.1.1/src/win32_init.c
        lab-env-master/exts/glfw-3.1.1/src/win32_monitor.c
        lab-env-master/exts/glfw-3.1.1/src/win32_platform.h
        lab-env-master/exts/glfw-3.1.1/src/win32_time.c
        lab-env-master/exts/glfw-3.1.1/src/win32_tls.c
        lab-env-master/exts/glfw-3.1.1/src/win32_tls.h
        lab-env-master/exts/glfw-3.1.1/src/win32_window.c
        lab-env-master/exts/glfw-3.1.1/src/window.c
        lab-env-master/exts/glfw-3.1.1/src/winmm_joystick.c
        lab-env-master/exts/glfw-3.1.1/src/winmm_joystick.h
        lab-env-master/exts/glfw-3.1.1/src/wl_init.c
        lab-env-master/exts/glfw-3.1.1/src/wl_monitor.c
        lab-env-master/exts/glfw-3.1.1/src/wl_platform.h
        lab-env-master/exts/glfw-3.1.1/src/wl_window.c
        lab-env-master/exts/glfw-3.1.1/src/x11_init.c
        lab-env-master/exts/glfw-3.1.1/src/x11_monitor.c
        lab-env-master/exts/glfw-3.1.1/src/x11_platform.h
        lab-env-master/exts/glfw-3.1.1/src/x11_window.c
        lab-env-master/exts/glfw-3.1.1/src/xkb_unicode.c
        lab-env-master/exts/glfw-3.1.1/src/xkb_unicode.h
        lab-env-master/projects/example/code/exampleapp.cc
        lab-env-master/projects/example/code/exampleapp.h
        lab-env-master/projects/example/code/main.cc
        lab-env-master/projects/Mathlib/code/vm_mathlib.h
        lab-env-master/projects/Solution/code/exampleapp.cc
        lab-env-master/projects/Solution/code/exampleapp.h
        lab-env-master/projects/Solution/code/main.cc
        lab-env-master/projects/Solution/code/Skeleton.cpp
        lab-env-master/projects/Solution/code/Skeleton.h)
